--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -5,15 +5,15 @@
 # 在 conf.d/*.conf 檔案中，請勿使用:
 #   - user
 #   - worker_processes
-#   - events { }
-#   - http { }
+#   - events {}
+#   - http {}
 #
 # 已在官方 Docker Nginx /etc/nginx/nginx.conf 預設提供
 
-# ============ 定義 upstream ============
+################################
+# 上游服務定義 (Optional)
+################################
 upstream suzoo_express {
-    # ★ 一般可直接 server suzoo_express:3000;
-    # ★ 若 DNS 無法解析，可臨時改 "soozookaizokuhunter-suzoo_express-1:3000"
     server suzoo_express:3000;
 }
 upstream suzoo_react {
@@ -23,7 +23,9 @@ upstream suzoo_fastapi {
     server suzoo_fastapi:8000;
 }
 
-# ============ 80 -> 443 重導 ============
+################################
+# 80 -> 443 重導
+################################
 server {
     listen 80;
     listen [::]:80;
@@ -31,16 +33,14 @@ server {
     return 301 https://$host$request_uri;
 }
 
-# ============ HTTPS 主機設定 ============
+################################
+# HTTPS 主機設定
+################################
 server {
-    # 避免 http2 directive deprecation
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    http2 on;
-
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # Docker 內 DNS
     resolver 127.0.0.11 valid=30s;
 
     # SSL 憑證 (Let's Encrypt)
@@ -52,8 +52,6 @@ server {
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
-
-    # HSTS
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # 上傳檔案大小限制
@@ -63,14 +61,12 @@ server {
     # React 前端 (SPA fallback)
     ####################################################
     location / {
-        try_files $uri $uri/ @reactfallback;
-    }
-    location @reactfallback {
+        # 把所有(除 /api/ 以外) 路徑代理給 React
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
@@ -80,29 +76,29 @@ server {
     location /auth/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     location /api/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     ####################################################
-    # FastAPI => /api/py/
+    # FastAPI => /api/py/ (自行調整路徑)
     ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
