--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,31 +1,19 @@
 # ============================
 # suzoo.conf (for /etc/nginx/conf.d/)
 # ============================
-#
-# 在 conf.d/*.conf 檔案中，請勿使用:
-#   - user
-#   - worker_processes
-#   - events {}
-#   - http {}
-#
-# 已在官方 Docker Nginx /etc/nginx/nginx.conf 預設提供
 
-################################
-# 上游服務定義 (Optional)
-################################
-upstream suzoo_express {
-    server suzoo_express:3000;
-}
+# upstream 定義 (Docker Compose 內部 DNS)
 upstream suzoo_react {
     server suzoo_react:3000;
+}
+upstream suzoo_express {
+    server suzoo_express:3000;
 }
 upstream suzoo_fastapi {
     server suzoo_fastapi:8000;
 }
 
-################################
 # 80 -> 443 重導
-################################
 server {
     listen 80;
     listen [::]:80;
@@ -33,12 +21,12 @@ server {
     return 301 https://$host$request_uri;
 }
 
-################################
 # HTTPS 主機設定
-################################
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
+
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
     resolver 127.0.0.11 valid=30s;
@@ -58,47 +46,53 @@ server {
     client_max_body_size 200M;
 
     ####################################################
-    # React 前端 (SPA fallback)
+    # React 前端
     ####################################################
     location / {
-        # 把所有(除 /api/ 以外) 路徑代理給 React
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     ####################################################
-    # Express API (/auth, /api)
+    # Express API
     ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     location /api/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     ####################################################
-    # FastAPI => /api/py/ (自行調整路徑)
+    # FastAPI => /api/py/
     ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # (可選) 自訂錯誤頁面
+    error_page 502 /custom_502.html;
+    location = /custom_502.html {
+        internal;
+        return 200 "Sorry, service is temporarily unavailable.";
     }
 }
