--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,8 +1,3 @@
-# ============================
-# suzoo.conf (for /etc/nginx/conf.d/)
-# ============================
-
-# upstream 定義 (Docker Compose 內部 DNS)
 upstream suzoo_react {
     server suzoo_react:3000;
 }
@@ -13,7 +8,6 @@ upstream suzoo_fastapi {
     server suzoo_fastapi:8000;
 }
 
-# 80 -> 443 重導
 server {
     listen 80;
     listen [::]:80;
@@ -21,17 +15,14 @@ server {
     return 301 https://$host$request_uri;
 }
 
-# HTTPS 主機設定
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
     http2 on;
-
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
     resolver 127.0.0.11 valid=30s;
 
-    # SSL 憑證 (Let's Encrypt)
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
@@ -42,54 +33,44 @@ server {
     ssl_prefer_server_ciphers on;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # 上傳檔案大小限制
     client_max_body_size 200M;
 
-    ####################################################
-    # React 前端
-    ####################################################
     location / {
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Real-IP       $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    ####################################################
-    # Express API
-    ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Real-IP       $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     location /api/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Real-IP       $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    ####################################################
-    # FastAPI => /api/py/
-    ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Real-IP       $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # (可選) 自訂錯誤頁面
+    # 可選的錯誤頁面配置
     error_page 502 /custom_502.html;
     location = /custom_502.html {
         internal;
