--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -35,6 +35,9 @@ server {
 
     client_max_body_size 200M;
 
+    ####################################################
+    # React 前端 (SPA fallback)
+    ####################################################
     location / {
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
@@ -44,6 +47,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    ####################################################
+    # Express API (/auth, /api)
+    ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
@@ -61,6 +67,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    ####################################################
+    # FastAPI => /api/py/
+    ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
         proxy_http_version 1.1;
@@ -70,7 +79,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # 可選的錯誤頁面配置
+    # (可選) 自訂錯誤頁面
     error_page 502 /custom_502.html;
     location = /custom_502.html {
         internal;
