--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   ########################################
-  # 1) PostgreSQL
+  # 1) PostgreSQL 資料庫
   ########################################
   suzoo_postgres:
     image: postgres:15-alpine
@@ -47,7 +47,7 @@ services:
       - suzoo_net
 
   ########################################
-  # 4) FastAPI
+  # 4) FastAPI (爬蟲 & 指紋計算 可選)
   ########################################
   suzoo_fastapi:
     build:
@@ -65,7 +65,7 @@ services:
       - suzoo_net
 
   ########################################
-  # 5) Express (後端)
+  # 5) Express (後端 Node.js)
   ########################################
   suzoo_express:
     container_name: suzoo_express
@@ -99,7 +99,7 @@ services:
     expose:
       - "3000"
     ports:
-      - "3001:3000"  # 對外顯示 React
+      - "3001:3000"  # 對外顯示 React (3001)
     networks:
       - suzoo_net
 
