--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -41,30 +41,26 @@ server {
     location / {
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
-        proxy_set_header Host            $host;
-        proxy_set_header X-Real-IP       $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     ####################################################
-    # Express API (/auth, /api)
+    # Express API (/auth, /api, /upload, /infringement, ...)
     ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host            $host;
-        proxy_set_header X-Real-IP       $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
     location /api/ {
         proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host            $host;
-        proxy_set_header X-Real-IP       $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location /upload/ {
+        proxy_pass http://suzoo_express;
+    }
+    location /infringement/ {
+        proxy_pass http://suzoo_express;
     }
 
     ####################################################
@@ -73,13 +69,13 @@ server {
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
         proxy_http_version 1.1;
-        proxy_set_header Host            $host;
-        proxy_set_header X-Real-IP       $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # (可選) 自訂錯誤頁面
+    # 自訂錯誤頁面 (可選)
     error_page 502 /custom_502.html;
     location = /custom_502.html {
         internal;
