--- a/.env
+++ b/.env
@@ -75,3 +75,8 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 EMAIL_FROM="KaiKai Shield <jeffqqm@gmail.com>"
+
+########################################
+# Express server
+########################################
+EXPRESS_PORT=3000
