--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -1,13 +1,13 @@
 fastapi==0.95.0
 uvicorn==0.20.0
 requests==2.28.2
-python-multipart==0.0.5
-pydantic==1.10.7
+python-dotenv==1.0.0
+psycopg2-binary==2.9.6
 cloudinary==1.30.0
+web3==5.31.3
+fpdf==1.7.2
+pydantic==1.10.7
 ipfshttpclient==0.8.0a2
 PyJWT==2.6.0
 Pillow==9.4.0
 imagehash==4.3.1
-fpdf==1.7.2
-web3==5.31.3
-psycopg2-binary==2.9.6
