--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  ########################################
+  ################################################
   # 1) PostgreSQL
-  ########################################
+  ################################################
   suzoo_postgres:
     image: postgres:15-alpine
     container_name: suzoo_postgres
@@ -16,9 +16,9 @@ services:
       - suzoo_net
     restart: unless-stopped
 
-  ########################################
+  ################################################
   # 2) Ganache (ETH 私有鏈)
-  ########################################
+  ################################################
   suzoo_ganache:
     image: trufflesuite/ganache-cli:latest
     container_name: suzoo_ganache
@@ -34,9 +34,9 @@ services:
       - suzoo_net
     restart: unless-stopped
 
-  ########################################
+  ################################################
   # 3) IPFS (可選)
-  ########################################
+  ################################################
   suzoo_ipfs:
     image: ipfs/go-ipfs:latest
     container_name: suzoo_ipfs
@@ -48,9 +48,9 @@ services:
       - suzoo_net
     restart: unless-stopped
 
-  ########################################
+  ################################################
   # 4) FastAPI (侵權檔案上傳 + 區塊鏈)
-  ########################################
+  ################################################
   suzoo_fastapi:
     build:
       context: ./fastapi
@@ -68,9 +68,9 @@ services:
       - "8000"
     restart: unless-stopped
 
-  ########################################
+  ################################################
   # 5) Express (只使用 pg Pool)
-  ########################################
+  ################################################
   suzoo_express:
     build:
       context: ./express
@@ -83,17 +83,13 @@ services:
       - .env
     networks:
       - suzoo_net
-    # ↓ 若只想讓 Nginx/React 呼叫，不用對外：
     expose:
       - "3000"
-    # ↓ 如果你也想讓外部直接訪問 Express，可改成:
-    # ports:
-    #   - "3002:3000"
     restart: unless-stopped
 
-  ########################################
+  ################################################
   # 6) React (前端)
-  ########################################
+  ################################################
   suzoo_react:
     build:
       context: ./frontend
@@ -106,13 +102,15 @@ services:
       - .env
     networks:
       - suzoo_net
+    # 若您想透過 http://localhost:3001 直接檢測 React 開發版，可保留以下:
     ports:
       - "3001:3000"
+    # 如果只想透過 Nginx 對外，則可移除此 ports 設定。
     restart: unless-stopped
 
-  ########################################
+  ################################################
   # 7) Nginx (對外: 80/443)
-  ########################################
+  ################################################
   suzoo_nginx:
     build:
       context: ./nginx
