--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -8,6 +8,9 @@ upstream suzoo_fastapi {
     server suzoo_fastapi:8000;
 }
 
+######################
+# HTTP → HTTPS 重導
+######################
 server {
     listen 80;
     listen [::]:80;
@@ -15,14 +18,19 @@ server {
     return 301 https://$host$request_uri;
 }
 
+######################
+# HTTPS 主要設定
+######################
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
     http2 on;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
+    # Docker 內建 DNS resolver
     resolver 127.0.0.11 valid=30s;
 
+    # SSL 憑證設定 (Let's Encrypt)
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
@@ -36,19 +44,22 @@ server {
     client_max_body_size 200M;
 
     ####################################################
-    # React 前端 (SPA fallback)
+    # 1) React 前端 (SPA Fallback)
     ####################################################
     location / {
         proxy_pass http://suzoo_react;
+        # 對於 SPA，建議加上 fallback 以避免在子路由 404
+        try_files $uri /index.html;
+
         proxy_http_version 1.1;
-        proxy_set_header Host            $host;
-        proxy_set_header X-Real-IP       $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     ####################################################
-    # Express API (/auth, /api, /upload, /infringement, ...)
+    # 2) Express API (/auth, /api, /upload, /infringement...)
     ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
@@ -62,14 +73,18 @@ server {
     location /infringement/ {
         proxy_pass http://suzoo_express;
     }
+    # 若有其他路徑 /admin/ /files/ 等，也可類似設定
 
     ####################################################
-    # FastAPI => /api/py/
+    # 3) FastAPI => /api/py/
     ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
     }
 
+    ###################################
+    # 自訂錯誤頁 502
+    ###################################
     error_page 502 /custom_502.html;
     location = /custom_502.html {
         internal;
