--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -44,12 +44,14 @@ server {
     client_max_body_size 200M;
 
     ####################################################
-    # 1) React 前端 (SPA Fallback)
+    # 1) React 前端 (純 proxy_pass 即可)
     ####################################################
     location / {
         proxy_pass http://suzoo_react;
-        # 對於 SPA，建議加上 fallback 以避免在子路由 404
-        try_files $uri /index.html;
+        # !!! 移除 try_files，避免發生「internal redirection cycle」 !!!
+        # try_files $uri /index.html;  <--- 這行若保留，會造成 500 無限跳轉
+        #
+        # React 容器內使用 serve -s build，本身已具有 SPA fallback
 
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
@@ -73,7 +75,6 @@ server {
     location /infringement/ {
         proxy_pass http://suzoo_express;
     }
-    # 若有其他路徑 /admin/ /files/ 等，也可類似設定
 
     ####################################################
     # 3) FastAPI => /api/py/
