--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,10 +102,10 @@ services:
       - .env
     networks:
       - suzoo_net
-    # 若您想透過 http://localhost:3001 直接檢測 React 開發版，可保留以下:
+    # 若您想透過 http://localhost:3001 直接檢測 React，可保留:
     ports:
       - "3001:3000"
-    # 如果只想透過 Nginx 對外，則可移除此 ports 設定。
+    # 如果只想透過 Nginx 對外，可自行移除上行
     restart: unless-stopped
 
   ################################################
