--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -44,14 +44,11 @@ server {
     client_max_body_size 200M;
 
     ####################################################
-    # 1) React 前端 (純 proxy_pass 即可)
+    # 1) React 前端
     ####################################################
     location / {
+        # 不再使用 try_files，避免 500 internal redirect cycle
         proxy_pass http://suzoo_react;
-        # !!! 移除 try_files，避免發生「internal redirection cycle」 !!!
-        # try_files $uri /index.html;  <--- 這行若保留，會造成 500 無限跳轉
-        #
-        # React 容器內使用 serve -s build，本身已具有 SPA fallback
 
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
