--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -47,7 +47,7 @@ server {
     # 1) React 前端
     ####################################################
     location / {
-        # 不再使用 try_files，避免 500 internal redirect cycle
+        # 直接 proxy_pass React 容器，不使用 try_files
         proxy_pass http://suzoo_react;
 
         proxy_http_version 1.1;
