--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -27,10 +27,10 @@ server {
     http2 on;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # Docker 內建 DNS resolver
+    # Docker 內部 DNS
     resolver 127.0.0.11 valid=30s;
 
-    # SSL 憑證設定 (Let's Encrypt)
+    # SSL 憑證
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
@@ -43,13 +43,11 @@ server {
 
     client_max_body_size 200M;
 
-    ####################################################
-    # 1) React 前端
-    ####################################################
+    ##############################
+    # 1) React 前端 (純 proxy_pass)
+    ##############################
     location / {
-        # 直接 proxy_pass React 容器，不使用 try_files
         proxy_pass http://suzoo_react;
-
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
@@ -57,9 +55,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    ####################################################
-    # 2) Express API (/auth, /api, /upload, /infringement...)
-    ####################################################
+    ##############################
+    # 2) Express API
+    ##############################
     location /auth/ {
         proxy_pass http://suzoo_express;
     }
@@ -73,9 +71,9 @@ server {
         proxy_pass http://suzoo_express;
     }
 
-    ####################################################
+    ##############################
     # 3) FastAPI => /api/py/
-    ####################################################
+    ##############################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
     }
