--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   ################################################
   # 1) PostgreSQL
@@ -95,7 +93,7 @@ services:
   suzoo_react:
     build:
       context: ./frontend
-      dockerfile: Dockerfile   # 見下方 Dockerfile 示例
+      dockerfile: Dockerfile
     container_name: suzoo_react
     depends_on:
       - suzoo_express
@@ -104,7 +102,7 @@ services:
       - .env
     networks:
       - suzoo_net
-    # 開放3001=>容器3000, 方便測試
+    # 若要從 http://<HostIP>:3001 測試 React，可保留:
     ports:
       - "3001:3000"
     restart: unless-stopped
@@ -127,7 +125,6 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      # 挂載自訂 suzoo.conf (確保不再有 default.conf)
       - ./nginx/suzoo.conf:/etc/nginx/conf.d/suzoo.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
     restart: unless-stopped
