--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -27,10 +27,10 @@ server {
     http2 on;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # Docker 內部 DNS
+    # Docker 內建 DNS
     resolver 127.0.0.11 valid=30s;
 
-    # SSL 憑證
+    # SSL 憑證 (Let's Encrypt)
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
@@ -43,9 +43,9 @@ server {
 
     client_max_body_size 200M;
 
-    ##############################
-    # 1) React 前端 (純 proxy_pass)
-    ##############################
+    ####################################################
+    # 1) React 前端
+    ####################################################
     location / {
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
@@ -55,9 +55,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    ##############################
-    # 2) Express API
-    ##############################
+    ####################################################
+    # 2) Express API (/auth, /api, /upload, /infringement...)
+    ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
     }
@@ -71,9 +71,9 @@ server {
         proxy_pass http://suzoo_express;
     }
 
-    ##############################
+    ####################################################
     # 3) FastAPI => /api/py/
-    ##############################
+    ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
     }
