--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "serve": "serve -s build -l 3000"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
