--- a/frontend/suzoo.conf
+++ b/frontend/suzoo.conf
@@ -1,4 +1,6 @@
-# HTTP -> HTTPS
+#######################
+# HTTP → HTTPS 重導
+#######################
 server {
     listen 80;
     listen [::]:80;
@@ -6,16 +8,17 @@ server {
     return 301 https://$host$request_uri;
 }
 
-# HTTPS server
+#######################
+# HTTPS 主服務
+#######################
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # SSL cert (Let's Encrypt)
+    # SSL 憑證 (Let's Encrypt)，在 docker-compose 裝載 /etc/letsencrypt
     ssl_certificate     /etc/nginx/certs/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/nginx/certs/live/suzookaizokuhunter.com/privkey.pem;
-
     ssl_session_timeout 5m;
     ssl_session_cache   shared:SSL:50m;
     ssl_protocols       TLSv1.2 TLSv1.3;
@@ -23,18 +26,20 @@ server {
     ssl_prefer_server_ciphers on;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # 指向 Dockerfile 已經複製入 /usr/share/nginx/html
+    # 前端靜態檔根目錄
     root   /usr/share/nginx/html;
     index  index.html index.htm;
 
-    # 用 try_files 支援 SPA 路由 fallback
+    # SPA Fallback
     location / {
         try_files $uri $uri/ /index.html =404;
     }
 
-    # (可選) 加速靜態資源
+    # 可選：對常見資源設定快取
     location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
+
+    # 可加 location /api/ { proxy_pass http://suzoo_express:3000; } 如需
 }
