--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,89 +1,7 @@
-upstream suzoo_react {
-    server suzoo_react:3000;
-}
-upstream suzoo_express {
-    server suzoo_express:3000;
-}
-upstream suzoo_fastapi {
-    server suzoo_fastapi:8000;
+location /api/ {
+    proxy_pass http://suzoo_express:3000;
 }
 
-######################
-# HTTP → HTTPS 重導
-######################
-server {
-    listen 80;
-    listen [::]:80;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-    return 301 https://$host$request_uri;
-}
-
-######################
-# HTTPS 主要設定
-######################
-server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    http2 on;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-
-    # Docker 內建 DNS
-    resolver 127.0.0.11 valid=30s;
-
-    # SSL 憑證 (Let's Encrypt)
-    ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-
-    ssl_session_timeout 5m;
-    ssl_session_cache   shared:SSL:50m;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
-    client_max_body_size 200M;
-
-    ####################################################
-    # 1) React 前端
-    ####################################################
-    location / {
-        proxy_pass http://suzoo_react;
-        proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    ####################################################
-    # 2) Express API (/auth, /api, /upload, /infringement...)
-    ####################################################
-    location /auth/ {
-        proxy_pass http://suzoo_express;
-    }
-    location /api/ {
-        proxy_pass http://suzoo_express;
-    }
-    location /upload/ {
-        proxy_pass http://suzoo_express;
-    }
-    location /infringement/ {
-        proxy_pass http://suzoo_express;
-    }
-
-    ####################################################
-    # 3) FastAPI => /api/py/
-    ####################################################
-    location /api/py/ {
-        proxy_pass http://suzoo_fastapi;
-    }
-
-    ###################################
-    # 自訂錯誤頁 502
-    ###################################
-    error_page 502 /custom_502.html;
-    location = /custom_502.html {
-        internal;
-        return 200 "Sorry, service is temporarily unavailable.";
-    }
+location /api/py/ {
+    proxy_pass http://suzoo_fastapi:8000;
 }
