--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,7 +1,32 @@
-location /api/ {
-    proxy_pass http://suzoo_express:3000;
+server {
+    listen 80;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    return 301 https://$host$request_uri;
 }
 
-location /api/py/ {
-    proxy_pass http://suzoo_fastapi:8000;
+server {
+    listen 443 ssl http2;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+
+    ssl_certificate     /etc/nginx/certs/live/suzookaizokuhunter.com/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/live/suzookaizokuhunter.com/privkey.pem;
+    # ... 略 ...
+
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+
+    # 前端 SPA
+    location / {
+        try_files $uri $uri/ /index.html =404;
+    }
+
+    # Express
+    location /api/ {
+        proxy_pass http://suzoo_express:3000;
+    }
+
+    # FastAPI
+    location /api/py/ {
+        proxy_pass http://suzoo_fastapi:8000;
+    }
 }
