--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,11 @@
   "name": "suzoo-frontend",
   "version": "1.0.0",
   "private": true,
+
+  // 在根域名部署時，可設為 "."
+  // 若您想指定絕對路徑，可改為 "https://suzookaizokuhunter.com"
   "homepage": "https://suzookaizokuhunter.com",
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
