--- a/frontend/suzoo.conf
+++ b/frontend/suzoo.conf
@@ -1,66 +1,76 @@
-########################
-# HTTPS server block
-########################
-server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-
-    # SSL 憑證與金鑰 (由 docker-compose volumes 掛載進容器)
-    ssl_certificate      /etc/nginx/certs/live/suzookaizokuhunter.com/fullchain.pem;
-    ssl_certificate_key  /etc/nginx/certs/live/suzookaizokuhunter.com/privkey.pem;
-
-    ssl_session_timeout 10m;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-
-    # 指向多階段複製的 /usr/share/nginx/html
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-
-    # *** SPA fallback: React Router  ***
-    location / {
-        try_files $uri $uri/ /index.html =404;
-    }
-
-    # 如果您需要將 /api/ => suzoo_express:3000，可在此加:
-    # location /api/ {
-    #     proxy_pass http://suzoo_express:3000;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Host              $host;
-    #     proxy_set_header X-Real-IP         $remote_addr;
-    #     proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-    # }
-
-    # 或 /api/py/ => suzoo_fastapi:8000
-    # location /api/py/ {
-    #     proxy_pass http://suzoo_fastapi:8000;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Host              $host;
-    #     proxy_set_header X-Real-IP         $remote_addr;
-    #     proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-    # }
-
-    # *** 建議：靜態資源長效快取，檔名含雜湊所以版本更新不衝突
-    location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        try_files $uri =404;
-    }
-
-    # 可避免 index.html 被快取
-    location = /index.html {
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-    }
-}
-
-########################
-# HTTP => HTTPS 重導
-########################
+#######################
+# HTTP → HTTPS 重導
+#######################
 server {
     listen 80;
     listen [::]:80;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
     return 301 https://$host$request_uri;
+}
+
+#######################
+# HTTPS 主服務
+#######################
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+
+    # SSL 憑證 (Let’s Encrypt) - 需在宿主 /etc/letsencrypt 挂載到容器 /etc/nginx/certs
+    ssl_certificate     /etc/nginx/certs/live/suzookaizokuhunter.com/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/live/suzookaizokuhunter.com/privkey.pem;
+    ssl_session_timeout 5m;
+    ssl_session_cache   shared:SSL:50m;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+    # 前端靜態檔根目錄 (Dockerfile 2nd stage COPY /app/build => /usr/share/nginx/html)
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+
+    ###################################
+    # React SPA Fallback
+    ###################################
+    location / {
+        try_files $uri $uri/ /index.html =404;
+    }
+
+    ###################################
+    # Express API => suzoo_express:3000
+    ###################################
+    location /api/ {
+        proxy_pass http://suzoo_express:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+    }
+
+    ###################################
+    # FastAPI => suzoo_fastapi:8000
+    ###################################
+    location /api/py/ {
+        proxy_pass http://suzoo_fastapi:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+    }
+
+    ###################################
+    # 可選：對常見資源設定長效快取
+    ###################################
+    location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        try_files $uri =404;
+    }
+
+    ###################################
+    # 避免 index.html 被快取
+    ###################################
+    location = /index.html {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+    }
 }
